--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,11 @@
 {
-    "name": "swissup/rtl",
+    "name": "swissup/module-rtl",
     "description": "Magento2 RTL detection",
     "keywords": [
         "rtl"
     ],
     "type": "magento2-module",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "license": "MIT",
     "autoload": {
         "files": [ "registration.php" ],
